Tweak English expiry email text

--- a/src/main/resources/expire-email.en.html
+++ b/src/main/resources/expire-email.en.html
@@ -14,15 +14,15 @@
 
 <p>The <a href="https://privacybydesign.foundation/privacy-policy-en/">logs</a>
     that the foundation maintains indicate that you have not used this account
-    for more than a year.</p>
+    for more than a year. This leads to the question if this account should be kept.</p>
 
 <p>The foundation prefers not to have to keep personal data (like email addresses)
-    of unused accounts, so your account will be deleted within two weeks.
-    You can prevent this by using the IRMA app with the above account. You can do
-    this by opening the IRMA app on your phone and entering the (correct) PIN code.
+    of unused accounts. For this reason your account will be deleted within two weeks.
+    You can prevent this by using the IRMA app with the above account within those two weeks,
+    by opening the IRMA app on your phone and entering the (correct) PIN code.
     This prolongs your registration.</p>
 
-<p><strong>Over uw account</strong></p>
+<p><strong>About your account</strong></p>
 
 <ul>
     <li>It is possible that by now you have another IRMA account,
@@ -43,7 +43,7 @@
 
     <li>You can see the logs that the foundation maintains on your account at all times
         by logging in with your MyIRMA attribute or your email address at
-        <a href="https://privacybydesign.foundation/myirma">NyIRMA</a>.
+        <a href="https://privacybydesign.foundation/myirma">MyIRMA</a>.
     </li>
 </ul>
 
